8310531: [Lilliput/JDK17] Revert unnecessary test code modifications and fix the tests
Reviewed-by: rkennke